[package]
name = "whichlang"
version = "0.1.1"
edition = "2021"
authors = ["Quickwit, Inc. <hello@quickwit.io>"]
description = "A blazingly fast and lightweight language detection library for Rust."
keywords = ["nlp", "lang", "whichlang", "language", "text-processing"]
categories = ["text-processing", "algorithms"]
repository = "https://github.com/quickwit-oss/whichlang"
homepage = "https://github.com/quickwit-oss/whichlang"
documentation = "https://docs.rs/whichlang"
readme = "README.md"
license = "MIT"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false

[[bin]]
name = "create_train_dataset"
